--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "rust-codespace"
+name = "guessing-game"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-path ="./src/lib/lib.rs"
-
 [dependencies]
+rand = "0.8.5"
